fix: Quantity dropdown visibility

--- a/src/features/Product/product.module.styl
+++ b/src/features/Product/product.module.styl
@@ -90,6 +90,7 @@
   .copy
     line-height 2
   .selector
+    position relative !important
     flex 1
   .button
     background-color $primary
