--- a/src/features/Selector/selector.styl
+++ b/src/features/Selector/selector.styl
@@ -1,5 +1,5 @@
 .Select
-  position relative
+  position absolute
 
 .Select.is-disabled > .Select-control
   background-color #f9f9f9
